Fix up details display and add spacing to bottom

--- a/src/components/common/Details/Details.css
+++ b/src/components/common/Details/Details.css
@@ -9,3 +9,7 @@
   color: #767676;
   font-weight: 300;
 }
+
+.spacer {
+  margin-bottom: 1rem;
+}
